objects/LLC_BI__Remote_Deposit_Capture_Service__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Software_Web_Access_Type__c</fullName>
        <label>Customer Software / Web Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DN Web - Internet</fullName>
                </value>
                <value>
                    <fullName>DNC - Client Software</fullName>
                </value>
                <value>
                    <fullName>DNX - Plus - Client Software</fullName>
                </value>
                <value>
                    <fullName>Netcapture</fullName>
                </value>
                <value>
                    <fullName>Netcapture Dump &amp; Go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Customize_Dollar_Amount__c</fullName>
        <label>Customize Dollar Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAR/LAR</fullName>
                </value>
                <value>
                    <fullName>Auto-Populate</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remote_Deposit_Capture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Deposit Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remote_Deposit_Limits_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Deposit Limits Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Remote Deposit Capture Service</relationshipLabel>
        <relationshipName>Remote_Deposit_Capture_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Virtual_Endorsement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Endorsement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posting_File_Delivery_FTP_Details__c</fullName>
        <label>Posting File Delivery FTP Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_File_Format_Delivery_Email__c</fullName>
        <label>Posting File Format Delivery Email</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_File_Format_Delivery__c</fullName>
        <label>Posting File Format Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Posting_File_Format__c</fullName>
        <label>Posting File Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>YARDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scanner_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scanner Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Remote Deposit Capture Service</label>
    <nameField>
        <displayFormat>RD-{000000000}</displayFormat>
        <label>Remote Deposit  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Deposit Capture Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>